    gpc_no_archs and gdc_no_archs vars.
  * Build gfortran on sh3 and sh4, don't build java.

  [Matthias Klose]
  * Don't add a symlink for gc-analyze(1) when building without GFDL docs.
    Closes: #471818.
  * rebuild-gcj-db: Don't complain about gcj-dbtool succeeding on armel.
    Closes: #469412.
  * Remove jv-scan symlink. Closes: #477548.
 
 -- Matthias Klose <doko@debian.org>  Sun, 20 Apr 2008 14:03:35 +0200

gcc-defaults (1.70) unstable; urgency=low

  [Matthias Klose]
  * /usr/share/gcj/debian_defaults: Remove alpha, arm, hppa from
    gcj_archs, remove alpha from gcj_native_archs, add armel to
    gcj_archs and gcj_native_archs.
  * Make GCC-4.3 the default on hppa.
  * Remove gcj-4.3 build dependency on arm.

  [Ludovic Brenta]
  * make gnat-4.3 the default on alpha, mips and mipsel again, so
    now all architectures have the same default.  Closes: #475365.

  [Arthur Loiret]
  * debian/README.Debian:
    - Mention libstdc++ is provided by GCC-4.3.
    - Updates for gdc.
  * Remove gdc's Depends on cpp, gdc now has its own doc dir.
    - debian/gdc.preinst: handle symlink->directory conversion.
  * Don't build gdc on sparc.  Closes: #461101.
  * Don't compress README.Debian anymore.

 -- Matthias Klose <doko@debian.org>  Fri, 18 Apr 2008 19:37:44 +0200

gcc-defaults (1.69) unstable; urgency=low

  [Arthur Loiret]
  * Build gcc-spu, g++-spu, gfortran-spu packages, defaulted to GCC-4.3.
  * Fix sh3, sh4 binary package generation.

 -- Matthias Klose <doko@debian.org>  Wed, 02 Apr 2008 01:44:48 +0200

gcc-defaults (1.68) unstable; urgency=low

  * gfortran: Restore the gfortran library symlinks on alpha, amd64, i386, hppa.

 -- Matthias Klose <doko@debian.org>  Sun, 30 Mar 2008 19:21:50 +0200

gcc-defaults (1.67) unstable; urgency=medium

  * Add build-dependency on gnat-4.3-base.
  * Don't build the g77 package anymore, remove build dependency on
    gcc-3.4-base.
  * Update README for Lenny.